# Discipline-AI

./: .cursor-rules.json  .gitignore  DEPLOYMENT.md  DISCIPLINE_AI_CONCEPT.md  IMPLEMENTATION_PLAN.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  SERVER_DEPLOYMENT.md  SPRINT_WEEK1.md  TASK_TRACKING.md  TECHNICAL_ARCHITECTURE.md  TECHNICAL_STRATEGY.md  TECH_STACK_PLAN.md  WEEK1_SPRINT_PLAN.md  deploy.sh  discipline-ai-concept.md  docker-compose.yml  init-backend.sh  init-frontend.sh  setup-nginx.sh  setup-server.sh  webhook-server.js
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: add_google_oauth_fields.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/: auth.py  calendar.py
backend/app/api/v1/endpoints/: auth.py
backend/app/core/: config.py
backend/app/models/: __init__.py  calendar.py  user.py
backend/app/schemas/: __init__.py  calendar.py  google_oauth.py  token.py  user.py
backend/app/services/: google_oauth.py  user_service.py
backend/app/utils/: security.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/calendar/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/types/: token.ts  user.ts
